fix edit button alignment

--- a/js-bootcamp/todo-app/src/styles/styles.css
+++ b/js-bootcamp/todo-app/src/styles/styles.css
@@ -142,6 +142,10 @@ a {
     color: #aaa;
 }
 
+.button--push--right {    
+    margin-left: auto;
+}
+
 .button--text:hover {
     background: none;
     color: white;
